client/src/components/parameter/parameters.module.css
.parameterWrap {
	background-color: var(--parameter-bg-color);
	break-inside: avoid-column;
	flex: 1;
	outline-color: transparent;
	outline-style: solid;
	outline-width: 3px;
	page-break-inside: avoid;
	padding: 2px 2px var(--mantine-spacing-xl) 2px;
	margin-bottom: 6px;
}

.paramWithMIDIMapping {

	&[data-instance-mapping="true"] {
		cursor: pointer;
		background-color: var(--parameter-mapping-bg-color);

		&:hover {
			background-color: var(--parameter-active-mapping-bg-color);
		}

		> * {
			pointer-events: none;
		}
	}

	&[data-param-mapping="true"] {
		background-color: var(--parameter-active-mapping-bg-color);
		outline-color: var(--parameter-active-mapping-outline);
	}
}

.parameterList {
	column-gap: var(--mantine-spacing-xl);
	min-height: 100%;

	&[data-color-scheme="light"] {
		--parameter-bg-color: transparent;
		--parameter-mapping-bg-color: var(--mantine-color-violet-1);
		--parameter-active-mapping-bg-color: var(--mantine-color-violet-2);
		--parameter-active-mapping-outline: var(--mantine-color-violet-5);
	}

	&[data-color-scheme="dark"] {
		--parameter-bg-color: transparent;
		--parameter-mapping-bg-color: var(--mantine-color-violet-9);
		--parameter-active-mapping-bg-color: var(--mantine-color-violet-4);
		--parameter-active-mapping-outline: var(--mantine-color-violet-2);
	}
}

.parameterItemLabel {
	display: flex;
	align-items: baseline;
	gap: .5em;
	justify-content: space-between;
	padding-right: calc(28px + var(--mantine-spacing-md));
	font-size: var(--mantine-font-size-sm);
	font-weight: 700;
	overflow: hidden;
	user-select: none;
}

.parameterItemLabelName {
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	min-width: 0;
}

.parameterItemLabelValue {
	font-weight: 400;
	white-space: nowrap;
	flex-shrink: 0;
}

.markLabel {
	font-size: var(--mantine-font-size-xs);
}

.markWrapper {

	&:first-child {
		.markLabel {
			transform: translate(calc(-50% + var(--slider-size)), calc(var(--mantine-spacing-xs)/2));
		}
	}

	&:last-child {
		.markLabel {
			transform: translate(calc(-100% + var(--slider-size)), calc(var(--mantine-spacing-xs)/2));
		}
	}
}

.parameterItemMIDIIndicator {
	--indicator-size: 8px;
	--indicator-translate-x: 150% !important;
	--indicator-translate-y: -40% !important;
	--indicator-color: var(--mantine-color-violet-4);
	max-width: 100%;
	min-width: 0;
	overflow: hidden;
	width: 100%;
}

